--- a/src/uLearn.Web/Views/RestorePassword/Index.cshtml
+++ b/src/uLearn.Web/Views/RestorePassword/Index.cshtml
@@ -9,20 +9,21 @@
 	@using (Html.BeginForm("Index", "RestorePassword", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 	{
 		<h2>Восстановление пароля</h2>
+		<hr/>
 		foreach (var message in Model.Messages)
 		{
 			<p class="@(message.IsError ? "text-danger" : "text-success")">@message.Text</p>
 		}
 		@Html.AntiForgeryToken()
 		<div class="form-group">
-			@Html.Label("Имя пользователя или Email", new { @class = "col-md-2 control-label" })
-			<div class="col-md-10">
+			@Html.Label("Имя пользователя или электронная почта", new { @class = "col-md-3 control-label" })
+			<div class="col-md-9">
 				@Html.TextBox("username", Model.UserName, new { @class = "form-control" })
 			</div>
 		</div>
 		<div class="form-group">
-			<div class="col-md-offset-2 col-md-10">
-				<input type="submit" value="Сбросить пароль" class="btn btn-default" />
+			<div class="col-md-offset-3 col-md-9">
+				<input type="submit" value="Сбросить пароль" class="btn btn-primary" />
 			</div>
 		</div>
 	}
