--- a/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,33 +1,27 @@
 ﻿@model ManageUserViewModel
 
-@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-	@Html.AntiForgeryToken()
-	<h4>Изменение пароля</h4>
-	<hr />
-	@Html.ValidationSummary("Нет, так не пойдет!")
-	<div class="form-group">
-		@Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-		<div class="col-md-10">
-			@Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-		</div>
-	</div>
-	<div class="form-group">
-		@Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-		<div class="col-md-10">
-			@Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-		</div>
-	</div>
-	<div class="form-group">
-		@Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-		<div class="col-md-10">
-			@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-		</div>
-	</div>
+<hr/>
 
-	<div class="form-group">
-		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Сменить пароль" class="btn btn-default" />
+<section class="login-and-registration-form">
+	@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { role = "form" }))
+	{
+		@Html.AntiForgeryToken()
+		<h2>Изменить пароль</h2>
+		@Html.ValidationSummary(true)
+		<div class="form-group">
+			@Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", @placeholder = "Старый пароль" })
 		</div>
-	</div>
-}
+		<div class="form-group">
+			@Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = "Новый пароль" })
+			@Html.ValidationMessageFor(m => m.NewPassword)
+		</div>
+		<div class="form-group">
+			@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Ещё раз" })
+			@Html.ValidationMessageFor(m => m.ConfirmPassword)
+		</div>
+
+		<div class="form-group">
+			<input type="submit" value="Сменить пароль" class="ph-btn ph-btn-green btn-block" />
+		</div>
+	}
+</section>
