--- a/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/ChangeDetailsPartial.cshtml
@@ -8,61 +8,50 @@
 	</p>
 }
 
-@using (Html.BeginForm("ChangeDetailsPartial", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-	@Html.AntiForgeryToken()
+<section class="login-and-registration-form">
+	@using (Html.BeginForm("ChangeDetailsPartial", "Account", FormMethod.Post, new { role = "form" }))
+	{
+		@Html.AntiForgeryToken()
 
-	@Html.ValidationSummary("Нет, так не пойдет!")
-	@Html.HiddenFor(m => m.UserId)
-	<div class="form-group">
-		@Html.LabelFor(m => m.Name, new { @class = "col-md-3 control-label" })
-		<div class="col-md-9">
-			@Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+		@Html.ValidationSummary(true)
+		@Html.HiddenFor(m => m.UserId)
+		<div class="form-group">
+			@Html.TextBoxFor(m => m.Name, new { @class = "form-control", @placeholder = "Логин" })
+			@Html.ValidationMessageFor(m => m.Name)
 		</div>
-	</div>
-	<div class="form-group">
-		@Html.LabelFor(m => m.FirstName, new { @class = "col-md-3 control-label" })
-		<div class="col-md-9">
-			@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+		<div class="form-group">
+			@Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @placeholder = "Имя" })
+			@Html.ValidationMessageFor(m => m.FirstName)
+
 		</div>
-	</div>
-	<div class="form-group">
-		@Html.LabelFor(m => m.LastName, new { @class = "col-md-3 control-label" })
-		<div class="col-md-9">
-			@Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+		<div class="form-group">
+			@Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @placeholder = "Фамилия" })
+			@Html.ValidationMessageFor(m => m.LastName)
+
 		</div>
-	</div>
-	<div class="form-group">
-		@Html.LabelFor(m => m.Email, new { @class = "col-md-3 control-label" })
-		<div class="col-md-9">
-			@Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+		<div class="form-group">
+			@Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Почта" })
+			@Html.ValidationMessageFor(m => m.Email)
+
 		</div>
-	</div>
-	<div class="form-group">
-		@Html.LabelFor(m => m.GroupName, new { @class = "col-md-3 control-label" })
-		<div class="col-md-9">
-			@Html.TextBoxFor(m => m.GroupName, new { @class = "form-control", list = "groupsList" })
+		<div class="form-group">
+			@Html.TextBoxFor(m => m.GroupName, new { @class = "form-control", list = "groupsList", @placeholder = "Учебная группа" })
 			@Html.Partial("_GroupsPrompt")
 		</div>
-	</div>
-	if (!Model.HasPassword)
-	{
-		<div class="form-group">
-			@Html.LabelFor(m => m.Password, new { @class = "col-md-3 control-label" })
-			<div class="col-md-9">
-				@Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+		if (!Model.HasPassword)
+		{
+			<div class="form-group">
+				@Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Пароль" })
+				@Html.ValidationMessageFor(m => m.Password)
 			</div>
-		</div>
-		<div class="form-group">
-			@Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-3 control-label" })
-			<div class="col-md-9">
-				@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+			<div class="form-group">
+				@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Ещё раз" })
+				@Html.ValidationMessageFor(m => m.ConfirmPassword)
 			</div>
+		}
+		<div class="form-group">
+			<input type="submit" value="Сохранить изменения" class="ph-btn ph-btn-blue btn-block" />
 		</div>
 	}
-	<div class="form-group">
-		<div class="col-md-offset-3 col-md-9">
-			<input type="submit" value="Сохранить изменения" class="btn btn-primary" />
-		</div>
-	</div>
-}
+</section>
+
