--- a/src/uLearn.Web/Views/Account/Manage.cshtml
+++ b/src/uLearn.Web/Views/Account/Manage.cshtml
@@ -4,8 +4,8 @@
 <div class="container">
 	
 	<div class="row">
-		<div class="col-md-offset-2 col-md-8">
-			<h2>@User.Identity.Name</h2>
+		<div class="col-md-offset-3 col-md-6">
+			<h2>Профиль @User.Identity.Name</h2>
 
 			<hr />
 
