--- a/src/uLearn.Web/Views/Account/Register.cshtml
+++ b/src/uLearn.Web/Views/Account/Register.cshtml
@@ -1,45 +1,61 @@
-﻿@model RegisterViewModel
+﻿@using ApprovalUtilities.SimpleLogger
+@model RegisterViewModel
 @{
 	ViewBag.Title = "Регистрация";
 }
-<div class="container">
-	<div class="row">
-		<div class="col-md-offset-3 col-md-6">
-			<h2>@ViewBag.Title</h2>
 
-			<section id="socialLoginForm">
-				@Html.Partial("../Login/_ExternalLoginsListPartial", new ExternalLoginsListModel { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
-			</section>
+@if (!Model.RegistrationFinished)
+{
+	<div class="container">
+		<div class="row">
+			<div class="col-md-offset-3 col-md-6">
+				<h2>@ViewBag.Title</h2>
 
-			<div class="strike-line grey">
-				<span>или придумайте логин и пароль</span>
+				<section id="socialLoginForm">
+					@Html.Partial("../Login/_ExternalLoginsListPartial", new ExternalLoginsListModel { Action = "ExternalLogin", ReturnUrl = ViewBag.ReturnUrl })
+				</section>
+
+				<div class="strike-line grey">
+					<span>или придумайте логин и пароль</span>
+				</div>
+
+				<section class="login-and-registration-form">
+					@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
+					{
+						@Html.HiddenFor(m => m.ReturnUrl)
+						@Html.AntiForgeryToken()
+						<div class="form-group">
+							@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Логин", @autofocus = "autofocus" })
+							@Html.ValidationMessageFor(m => m.UserName)
+						</div>
+						<div class="form-group">
+							@Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Пароль" })
+							@Html.ValidationMessageFor(m => m.Password)
+						</div>
+						<div class="form-group">
+							@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Ещё раз" })
+							@Html.ValidationMessageFor(m => m.ConfirmPassword)
+						</div>
+
+						@Html.ValidationSummary(true)
+
+						<div class="form-group">
+							<input type="submit" value="Поехали" class="ph-btn ph-btn-green btn-block"/>
+						</div>
+					}
+				</section>
 			</div>
-
-			<section class="login-and-registration-form">
-				@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
-				{
-					@Html.HiddenFor(m => m.ReturnUrl)
-					@Html.AntiForgeryToken()
-					<div class="form-group">
-						@Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = "Логин", @autofocus = "autofocus" })
-						@Html.ValidationMessageFor(m => m.UserName)
-					</div>
-					<div class="form-group">
-						@Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Пароль" })
-						@Html.ValidationMessageFor(m => m.Password)
-					</div>
-					<div class="form-group">
-						@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Ещё раз" })
-						@Html.ValidationMessageFor(m => m.ConfirmPassword)
-					</div>
-
-					@Html.ValidationSummary(true, "Нет, так не пойдет:")
-
-					<div class="form-group">
-						<input type="submit" value="Поехали" class="ph-btn ph-btn-green btn-block" />
-					</div>
-				}
-			</section>
 		</div>
 	</div>
-</div>
+}
+else
+{
+	@section scripts {
+		<script>
+			$(document).ready(function() {
+				window.yaCounter25997251.reachGoal('registration');
+				window.location.replace("@Html.AttributeEncode(Model.ReturnUrl)");
+			});
+		</script>
+	}
+}
