--- a/src/uLearn.Web/Views/Login/ExternalLoginConfirmation.cshtml
+++ b/src/uLearn.Web/Views/Login/ExternalLoginConfirmation.cshtml
@@ -23,10 +23,18 @@
 						@Html.ValidationMessageFor(m => m.UserName)
 					</div>
 					<div class="form-group">
-						<input type="submit" class="ph-btn ph-btn-green btn-block" value="Сохранить" />
+						<input type="submit" class="ph-btn ph-btn-green btn-block" value="Сохранить"/>
 					</div>
 				}
 			</section>
 		</div>
 	</div>
 </div>
+
+@section scripts {
+	<script>
+		$(document).ready(function () {
+			window.yaCounter25997251.reachGoal('registration');
+		});
+	</script>
+}
