--- a/src/uLearn.Web/Views/RestorePassword/SetNewPassword.cshtml
+++ b/src/uLearn.Web/Views/RestorePassword/SetNewPassword.cshtml
@@ -4,36 +4,40 @@
 	ViewBag.Title = "Восстановление пароля";
 }
 <div class="container">
-	<h2>Восстановление пароля</h2>
-	@foreach (var error in Model.Errors)
-	{
-		<p class="text-danger">@error</p>
-	}
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
+			<h2>@ViewBag.Title</h2>
+			<section class="login-and-registration-form">
+				@foreach (var error in Model.Errors)
+				{
+					<p class="text-danger">@error</p>
+				}
 
-	@if (Model.RequestId != null)
-	{
-		using (Html.BeginForm("SetNewPassword", "RestorePassword", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-		{
-			@Html.AntiForgeryToken()
-			@Html.ValidationSummary("Что-то не так!")
-			<div class="form-group">
-				@Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-				<div class="col-md-10">
-					@Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-				</div>
-			</div>
-			<div class="form-group">
-				@Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-				<div class="col-md-10">
-					@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-				</div>
-			</div>
-			@Html.HiddenFor(m => m.RequestId)
-			<div class="form-group">
-				<div class="col-md-offset-2 col-md-10">
-					<input type="submit" value="Задать пароль" class="btn btn-default" />
-				</div>
-			</div>
-		}
-	}
+				@if (Model.RequestId != null)
+				{
+					using (Html.BeginForm("SetNewPassword", "RestorePassword", FormMethod.Post, new { role = "form" }))
+					{
+						<div class="strike-line grey">
+							<span>Введите новый пароль</span>
+						</div>
+
+						@Html.AntiForgeryToken()
+						@Html.ValidationSummary(true)
+						<div class="form-group">
+							@Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = "Новый пароль", @autofocus = "autofocus" })
+							@Html.ValidationMessageFor(m => m.NewPassword)
+						</div>
+						<div class="form-group">
+							@Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Ещё раз" })
+							@Html.ValidationMessageFor(m => m.ConfirmPassword)
+						</div>
+						@Html.HiddenFor(m => m.RequestId)
+						<div class="form-group">
+							<input type="submit" value="Сохранить" class="ph-btn ph-btn-green btn-block" />
+						</div>
+					}
+				}
+			</section>
+		</div>
+	</div>
 </div>
