--- a/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/uLearn.Web/Views/Shared/_LoginPartial.cshtml
@@ -1,16 +1,17 @@
 ﻿@using Microsoft.AspNet.Identity
+
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Login", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
-    @Html.AntiForgeryToken()
+		@Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink(User.Identity.GetUserName(), "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage", @class="greating" })
-        </li>
-	    <li><a href="javascript:document.getElementById('logoutForm').submit()">Выход</a></li>
-    </ul>
+		<ul class="nav navbar-nav navbar-right">
+			<li>
+				@Html.ActionLink(User.Identity.GetUserName(), "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Профиль", @class="greating" })
+			</li>
+			<li><a href="javascript:document.getElementById('logoutForm').submit()">Выход</a></li>
+		</ul>
     }
 }
 else
