SlideId is GUID
1. New url for slide: /Course/<CourseId>/<SlideTitle>_<SlideId>
2. /Course/<CourseId> now redirects to the slide, not shows it directly
3. /Slide/<SlideId> now redirects to the slide
4. Bugfix: visitsRepo.IsPassed(userId, slideId): parameters has been mixed up

--- a/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
+++ b/src/uLearn.Web/Views/SlideNavigation/PrevNextButtons.cshtml
@@ -6,11 +6,11 @@
 	data-isaccepted="@(Model.NextIsAcceptedSolutions ? "true" : "")">
 	<a class="btn btn-default no-rounds ctrl-group"
 		id="prev_slide_button"
-		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.PrevSlideIndex})">Назад</a>
+		href="@Url.RouteUrl("Course.SlideById", new {courseId = Model.CourseId, slideId = Model.PrevSlide != null ? Model.PrevSlide.Url : ""})">Назад</a>
 	<a class="btn btn-default @(Model.IsGuest ? "" : "block-next") no-rounds ctrl-group next_button"
 		id="next_solutions_button"
 		href="@Url.Action("AcceptedSolutions", "Course", new {courseId = Model.CourseId, slideIndex = Model.SlideIndex})">Далее</a>
 	<a class="btn btn-default @(Model.IsGuest ? "" : "block-next") no-rounds ctrl-group next_button"
 		id="next_slide_button"
-		href="@Url.Action("Slide", "Course", new {courseId = Model.CourseId, slideIndex = Model.NextSlideIndex})">Далее</a>
+		href="@Url.RouteUrl("Course.SlideById", new {courseId = Model.CourseId, slideId = Model.NextSlide != null ? Model.NextSlide.Url : ""})">Далее</a>
 </div>
