--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -206,7 +206,7 @@
 		{
 			var item = items[itemIndex];
 			var id = isMultiply ? itemIndex + "noMult" : model.BlockIndex.ToString();
-			var itemChecked = model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].Contains(item.Id);
+			var itemChecked = model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].Select(x => x.ItemId).Contains(item.Id);
 			var ans = itemChecked ? "checked" : "";
 			var itemClass = "";
 			var title = "";
@@ -240,9 +240,11 @@
 	QuizBlockData model = context.GetBlockData(block) ?? new QuizBlockData(new QuizModel(), 1, QuizState.NotPassed);
 	if (model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() != null)
 	{
-		value = model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault();
+		var answers = model.QuizModel.AnswersToQuizes[block.Id];
+		var userAnswer = answers.FirstOrDefault();
+		value = userAnswer.Text;
 		quizRes = (model.QuizState == QuizState.Total)
-			? (model.QuizModel.AnswersToQuizes[block.Id][1] == "False" ? "wrong-quiz" : "right-quiz") : "";
+			? (userAnswer.IsRightAnswer ? "right-quiz" : "wrong-quiz") : "";
 	}
 	var sample = block.Sample;
 	<div class="quiz quiz-block-input">
@@ -271,7 +273,7 @@
 	QuizBlockData model = context.GetBlockData(block) ?? new QuizBlockData(new QuizModel(), 1, QuizState.NotPassed);
 	if (model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() != null)
 	{
-		var userAnswer = model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() == "True";
+		var userAnswer = model.QuizModel.AnswersToQuizes[block.Id].Select(x => x.Text).FirstOrDefault() == "True";
 		tchecked = userAnswer ? "checked" : "";
 		fchecked = userAnswer ? "" : "checked";
 		if (model.QuizState == QuizState.Total)
@@ -306,6 +308,112 @@
 				<i class="glyphicon glyphicon-ok" style="color: green" title="@ftitle"></i>
 			}
 		</div>
+	</div>
+	if (model.QuizState == QuizState.Total && !string.IsNullOrEmpty(block.Explanation))
+	{
+		<div class="text-muted">@block.Explanation</div>
+	}
+}
+
+@helper QuizBlock(OrderingBlock block, BlockRenderContext context)
+{
+	var items = block.ShuffledItems();
+	QuizBlockData model = context.GetBlockData(block) ?? new QuizBlockData(new QuizModel(), 1, QuizState.NotPassed);
+	if (model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() != null)
+	{
+		var userAnswers = model.QuizModel.AnswersToQuizes[block.Id].Select(x => x.Text).ToList();
+		items = items.OrderBy(item => userAnswers.IndexOf(item.GetHash())).ToArray();
+	}	
+	<div class="quiz-block-ordering @(model.QuizState != QuizState.NotPassed ? "not-movable" : "")" id='@(block.Id + "_quizBlock")'>
+		@if (model.QuizState == QuizState.Total && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault().IsRightQuizBlock)
+		{
+			<div class="quiz-block__correct">
+				<button class="quiz-block-ordering__correct-button btn btn-primary"
+				        title="Нажмите и удерживайте"
+						data-order="@(string.Join(",", block.Items.Select(x => x.GetHash())))"
+						>Правильные ответы</button>
+			</div>
+		}
+		<ul>
+			@for (var itemIndex = 0; itemIndex < items.Length; itemIndex++)
+			{
+				var item = items[itemIndex];
+				<li>
+					<div class="quiz quiz-block-ordering__item" data-item-id="@item.GetHash()">
+						<input autocomplete="off" id='@(block.Id + "quizBlock" + item.GetHash())' type="hidden">
+						@item.Text.RenderTex()
+						@if (model.QuizState == QuizState.NotPassed)
+						{
+							<div class="quiz-block-ordering__item__icons">
+								<span class="glyphicon glyphicon-arrow-up"></span>
+								<span class="glyphicon glyphicon-arrow-down"></span>
+							</div>
+						}
+					</div>
+				</li>
+			}
+		</ul>
+	</div>
+	if (model.QuizState == QuizState.Total && !string.IsNullOrEmpty(block.Explanation))
+	{
+		<div class="text-muted">@block.Explanation</div>
+	}
+}
+
+@helper QuizBlock(MatchingBlock block, BlockRenderContext context)
+{
+	var fixedItems = block.GetMatches(block.ShuffleFixed);
+	var movableItems = block.GetMatches(true);
+
+	QuizBlockData model = context.GetBlockData(block) ?? new QuizBlockData(new QuizModel(), 1, QuizState.NotPassed);
+	if (model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() != null)
+	{
+		var userAnswers = model.QuizModel.AnswersToQuizes[block.Id];
+		fixedItems = block.GetMatches().OrderBy(item => userAnswers.FindIndex(answer => item.GetHashForFixedItem() == answer.ItemId)).ToList();
+		movableItems = GetMovableItemsAccordingToUserAnswers(userAnswers, fixedItems);
+	}
+	<div class="quiz-block-matching @(model.QuizState != QuizState.NotPassed ? "not-movable" : "")" id='@(block.Id + "_quizBlock")'>
+		@if (model.QuizState == QuizState.Total && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault().IsRightQuizBlock)
+		{
+			<div class="quiz-block__correct">
+				<button class="quiz-block-matching__correct-button btn btn-primary"
+						title="Нажмите и удерживайте"
+						data-order="@(string.Join(",", fixedItems.Select(x => x.GetHashForMovableItem())))">
+					Правильные ответы
+				</button>
+			</div>
+		}
+		@if (model.QuizState == QuizState.NotPassed)
+		{
+			<div class="quiz-block-matching__description text-muted">Перетащите элементы из правого столбца на свободные места</div>
+		}
+		<ul>
+			@for (var itemIndex = 0; itemIndex < fixedItems.Count; itemIndex++)
+			{
+				var fixedItem = fixedItems[itemIndex];
+				var movableItem = movableItems[itemIndex];
+				<li>
+					<div class="quiz quiz-block-matching__item row">
+						<input autocomplete="off" id='@(block.Id + "quizBlock" + fixedItem.GetHashForFixedItem())' type="hidden">
+						<div class="quiz-block-matching__fixed-item col-xs-3" data-item-id="@fixedItem.GetHashForFixedItem()">@fixedItem.FixedItem</div>
+						@if (model.QuizState == QuizState.NotPassed)
+						{
+							<div class="quiz-block-matching__droppable col-xs-3" data-block-id="@block.Id" data-item-id="@fixedItem.GetHashForFixedItem()"></div>
+							<div class="quiz-block-matching__source__droppable col-xs-3 col-sm-offset-1 added" data-block-id="@block.Id" data-movable-item-id="@movableItem.GetHashForMovableItem()">
+								<div class="quiz-block-matching__movable-item" data-block-id="@block.Id" data-item-id="@movableItem.GetHashForMovableItem()">@movableItem.MovableItem</div>
+							</div>
+						}
+						else
+						{
+							<div class="quiz-block-matching__droppable col-xs-3 added" data-block-id="@block.Id" data-item-id="@fixedItem.GetHashForFixedItem()">
+								<div class="quiz-block-matching__movable-item" data-block-id="@block.Id" data-item-id="@movableItem.GetHashForMovableItem()">@movableItem.MovableItem</div>
+							</div>
+						}
+						
+					</div>
+				</li>
+			}
+		</ul>
 	</div>
 	if (model.QuizState == QuizState.Total && !string.IsNullOrEmpty(block.Explanation))
 	{
@@ -383,4 +491,18 @@
 	{
 		return isGuest ? "disabled" : null;
 	}
+
+	private static List<MatchingMatch> GetMovableItemsAccordingToUserAnswers(List<UserQuiz> userAnswers, List<MatchingMatch> fixedItems)
+	{
+		var movableItems = new List<MatchingMatch>();
+		foreach (var fixedItem in fixedItems)
+		{
+			var userAnswer = userAnswers.FirstOrDefault(answer => answer.ItemId == fixedItem.GetHashForFixedItem());
+			if (userAnswer == null)
+				continue;
+			movableItems.Add(fixedItems.FirstOrDefault(item => item.GetHashForMovableItem() == userAnswer.Text));
+		}
+		return movableItems;
+	}
+
 }
