1. ValidateInput(false) for Login, Registration and Manage views 2. Style changes in manage page — pull button to right and make it smaller

--- a/src/uLearn.Web/Views/Account/_RemoveAccountPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_RemoveAccountPartial.cshtml
@@ -18,7 +18,7 @@
 								<div>
 									@Html.Hidden("loginProvider", account.LoginProvider)
 									@Html.Hidden("providerKey", account.ProviderKey)
-									<input type="submit" class="btn btn-danger" value="Удалить" title="Удалить привязку @account.LoginProvider" />
+									<input type="submit" class="btn btn-danger btn-sm pull-right" value="Удалить" title="Удалить привязку @account.LoginProvider" />
 								</div>
 							}
 						}
